<?xml version="1.0"?>
<package>
  <name>openrtm_aist_python</name>
  <version>1.1.1</version>
  <description>The openrtm_aist_python package

   Version was bumped from 1.1.0 when the package was catkinized and released into ROS buildfarm via bloom.
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <author email="shinji.kurihara@aist.go.jp">Shinji Kurihara</author>

  <license>EPL</license>
  <url type="website">http://ros.org/wiki/openrtm_aist_python</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>unzip</build_depend>

  <build_depend>python-omniorb</build_depend>
  <run_depend>python-omniorb</run_depend>

  <export/>
</package>