<?xml version="1.0"?>
<package>
  <name>openrtm_aist_python</name>
  <version>1.1.1</version>
  <description>
   <p>Python binding of OpenRTM-AIST (see <a href = "http://www.ros.org/wiki/openrtm_aist">openrtm_aist</a> for further information).</p>

   <p>Its development is happening at <a href = "http://www.openrtm.org/pub/OpenRTM-aist/">openrtm.org/pub/OpenRTM-aist</a>. The repository listed below is that of its ROS wrapper.</p>
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <author email="shinji.kurihara@aist.go.jp">Shinji Kurihara</author>

  <license>EPL</license>
  <url type="website">http://ros.org/wiki/openrtm_aist_python</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>unzip</build_depend>

  <build_depend>python-omniorb</build_depend>
  <run_depend>python-omniorb</run_depend>

  <export/>
</package>